@@ -42,6 +42,8 @@ lib/SPVM/Net/SSLeay/Callback/PemPasswd.pm
 lib/SPVM/Net/SSLeay/Callback/PemPasswd.spvm
 lib/SPVM/Net/SSLeay/Callback/PskClient.pm
 lib/SPVM/Net/SSLeay/Callback/PskClient.spvm
+lib/SPVM/Net/SSLeay/Callback/PskServer.pm
+lib/SPVM/Net/SSLeay/Callback/PskServer.spvm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.pm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.spvm
 lib/SPVM/Net/SSLeay/Callback/TlsextStatus.pm
