@@ -6,11 +6,11 @@ package SPVM::Net::SSLeay::Callback::PskClient;
 
 =head1 Name
 
-SPVM::Net::SSLeay::Callback::PskClient - Callback for SSL_CTX_set_psk_client_callback function in OpenSSL.
+SPVM::Net::SSLeay::Callback::PskClient - Callback for SSL_CTX_set_psk_server_callback function in OpenSSL.
 
 =head1 Description
 
-Net::SSLeay::Callback::PskClient interface in L<SPVM> is the callback for L<SSL_CTX_set_psk_client_callback|https://docs.openssl.org/1.0.2/man3/SSL_CTX_set_psk_client_callback> function in OpenSSL.
+Net::SSLeay::Callback::PskClient interface in L<SPVM> is the callback for L<SSL_CTX_set_psk_server_callback|https://docs.openssl.org/1.1.1/man3/SSL_CTX_use_psk_identity_hint> function in OpenSSL.
 
 =head1 Usage
 
@@ -18,9 +18,9 @@ Net::SSLeay::Callback::PskClient interface in L<SPVM> is the callback for L<SSL_
 
 =head1 Interface Methods
 
-C<required method : int ($ssl : L<Net::SSLeay|SPVM::Net::SSLeay>, $hint : string, $identity : mutable string, $max_identity_len : int, $psk : mutable string, $max_psk_len : int);>
+C<required method : int ($ssl : L<Net::SSLeay|SPVM::Net::SSLeay>, $identity : string, $identity_len : int, $sess_ref : L<Net::SSLeay::SSL_SESSION|SPVM::Net::SSLeay::SSL_SESSION>[]);>
 
-This method is callback for native L<SSL_CTX_set_psk_client_callback|https://docs.openssl.org/1.0.2/man3/SSL_CTX_set_psk_client_callback> function.
+This method is callback for native L<SSL_CTX_set_psk_server_callback|https://docs.openssl.org/1.1.1/man3/SSL_CTX_use_psk_identity_hint> function.
 
 =head1 See Also
 
