@@ -1,0 +1,41 @@
+package SPVM::Net::SSLeay::Callback::PskServer;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::Callback::PskServer - Short Description
+
+=head1 Description
+
+Net::SSLeay::Callback::PskServer interface in L<SPVM> has interface methods to do someting.
+
+=head1 Usage
+
+  interface Net::SSLeay::Callback::PskServer;
+
+=head1 Details
+
+
+
+=head1 Interface Methods
+
+
+
+
+=head1 Repository
+
+
+
+=head1 Author
+
+Yuki Kimoto C<kimoto.yuki@gmail.com>
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
