@@ -1,0 +1,10 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::Callback::PskServer : interface_t {
+  use Net::SSLeay;
+  use Net::SSLeay::SSL_SESSION;
+  
+  required method : int ($ssl : Net::SSLeay, $identity : string, $identity_len : int, $sess_ref : Net::SSLeay::SSL_SESSION[]);
+  
+}
