@@ -24,6 +24,7 @@
     * Add Net::SSLeay::Callback::TlsextServername class.
     * Add Net::SSLeay::Callback::PemPasswd class.
     * Add Net::SSLeay::SSL_CTX#set_psk_client_callback method.
+    * Add Net::SSLeay::SSL_CTX#set_psk_server_callback method.
     
 0.013 2024-11-14
   [New Features]
